day33_GatewayAPI/frontend-app.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: frontend-app
  namespace: default
  labels:
    app: frontend
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: default
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
